# kikansha

./: .gitignore  Cargo.toml  download_assets.py
config/: log4rs.yaml
src/kikansha/: lib.rs
src/kikansha/debug/: fps.rs  mod.rs  tracing.rs
src/kikansha/engine/: cache.rs  mod.rs  queue.rs
src/kikansha/figure/: mod.rs
src/kikansha/frame/: frame.rs  mod.rs  rendering.rs  system.rs
src/kikansha/frame/geometry/: mod.rs
src/kikansha/frame/lightning/: ambient.rs  directional.rs  mod.rs  pointing.rs
src/kikansha/frame/shaders/: ambient.frag  ambient.vert  deferred.frag  deferred.vert  directional.frag  directional.vert  geomerty.frag  geomerty.vert  pointing.frag  pointing.vert
src/kikansha/scene/: camera.rs  gltf.rs  lights.rs  mod.rs
src/kikansha/state/: cache.rs  mod.rs
src/ressha/: main.rs  triangle.vert
