[package]
name = "hello_vulkan"
version = "0.1.0"
authors = ["michey <aleksandr.mihailov@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ressha"
path = "src/ressha/main.rs"

[lib]
name="kikansha"
path= "src/kikansha/lib.rs"

[profile.release]
debug = true


[dependencies]
vulkano = "0.20"
vulkano-shaders = "0.20"
gltf = "0.15.2"
winit = "0.24"
vulkano-win = "0.20.0"
nalgebra = "0.24.0"
nalgebra-glm = "0.10.0"
png = "0.16.8"

